--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <li><a href="./libramorte.html">Colmillosauro Libramorte</a></li>
     <li><a href="./panzachancro.html">Panzachancro</a></li>
     <li><a href="./caraputrea.html">Carapútrea</a></li>
-    <li><a href="./valy.html">Valytria</a></li>
-    <li><a href="./pp.html">Profesor Putricidio</a></li>
-    <li><a href="./principes.html">Príncipes de Sangre</a></li>
-    <li><a href="./reina.html">Reina de Sangre</a></li>
-    <li><a href="./sindra.html">Sindragosa</a></li>
+    <li>Valytria</li>
+    <li>Profesor Putricidio</li>
+    <li>>Príncipes de Sangre</li>
+    <li>>Reina de Sangre</li>
+    <li>Sindragosa</li>
+    <li>EL Rey Exánime</li>
   </ul>
 </body>
 <style>
