--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <li><a href="./caraputrea.html">Carapútrea</a></li>
     <li>Valytria</li>
     <li>Profesor Putricidio</li>
-    <li>>Príncipes de Sangre</li>
+    <li><a href="./bpc.html">Príncipes de Sangre</a></li>
     <li>>Reina de Sangre</li>
     <li>Sindragosa</li>
     <li>EL Rey Exánime</li>
