--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="./panzachancro.html">Panzachancro</a></li>
     <li><a href="./caraputrea.html">Carapútrea</a></li>
     <li>Valytria</li>
-    <li>Profesor Putricidio</li>
+    <li><a href="./pp.html">Profesor Putricidio</a></li>
     <li><a href="./bpc.html">Príncipes de Sangre</a></li>
     <li>>Reina de Sangre</li>
     <li>Sindragosa</li>
