--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li>Valytria</li>
     <li><a href="./pp.html">Profesor Putricidio</a></li>
     <li><a href="./bpc.html">Príncipes de Sangre</a></li>
-    <li>>Reina de Sangre</li>
+    <li><a href="./bql.html">Reina de Sangre</a></li>
     <li>Sindragosa</li>
     <li>EL Rey Exánime</li>
   </ul>
