--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="./pp.html">Profesor Putricidio</a></li>
     <li><a href="./bpc.html">Príncipes de Sangre</a></li>
     <li><a href="./bql.html">Reina de Sangre</a></li>
-    <li>Sindragosa</li>
+    <li><a href="./sindy.html">Sindragosa</a></li>
     <li>EL Rey Exánime</li>
   </ul>
 </body>
