agrega LICH KING

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="./bpc.html">Príncipes de Sangre</a></li>
     <li><a href="./bql.html">Reina de Sangre</a></li>
     <li><a href="./sindy.html">Sindragosa</a></li>
-    <li>EL Rey Exánime</li>
+    <li><a href="./lk.html">El Rey Exánime</a></li>
   </ul>
 </body>
 <style>
